# Backtesting

./: README.md
BackTester/: CMakeLists.txt  Cointegration.cpp  Cointegration.h  DataLoader.cpp  DataLoader.h  Kalman.cpp  Kalman.h  Matrix.h  Menu.cpp  Menu.h  Portfolio.cpp  Portfolio.h  Signals.cpp  Signals.h  Strategy.cpp  Strategy.h  main.cpp
BackTester/Data/Input/: aapl_Data.csv  ccl_Data.csv  cola_Data.csv  cuk_Data.csv  cvx_Data.csv  ma_Data.csv  pepsi_Data.csv  v_Data.csv  xom_Data.csv
BackTester/Data/Output/: chart.html  results.json
